fix icon vertical-align

--- a/app/javascript/iconfont/index.scss
+++ b/app/javascript/iconfont/index.scss
@@ -10,7 +10,7 @@
   font-feature-settings: normal;
   font-variant: normal;
   text-rendering: auto;
-  line-height: 0;
+  line-height: inherit;
   font-size: 1em;
 }
 
