--- a/app/javascript/styles/component/menu.scss
+++ b/app/javascript/styles/component/menu.scss
@@ -25,7 +25,6 @@
       font-size: 16px;
       color: #979797;
       margin-right: 5px;
-      transform: translateY(-5%);
     }
     &.selected {
       color: $primary;
